# agentsFastapiTemplate

./: docker-compose.dev.yaml  docker-compose.homolog.yaml  pyproject.toml
app/api/: api_generator.py
app/api/endpoints/v1/: __init__.py  chat.py  root.py
app/api/events/: lifespan.py
app/api/router/: router_register.py
app/api/router/v1/: __init__.py  chat.py  root.py
app/api/schemas/: chat_schemas.py  root_schemas.py
app/core/controllers/: chat_controller.py
app/core/graph_engine/: main_graph.py
app/core/graph_engine/common/chains/: chain_with_structured_output.py  chain_with_text_output.py
app/core/graph_engine/common/handlers/: translate_langgraph_node_event.py
app/core/helpers/exceptions_handlers/: register_exceptions_handlers.py
app/core/helpers/logger/http/: http_logger.py  (+1 more)
app/core/schemas/: chain_basic_schemas.py  chat_schemas.py
app/core/services/: graph_services.py  state_services.py
app/core/shared/exceptions_handlers/: register_exceptions_handlers.py
app/core/shared/metadata/: metadata.py
app/infrastructure/database/mongo/: mongo_connection.py
app/infrastructure/logger/: configure_logger.py
app/infrastructure/logger/http/: configure_http_logger.py
app/infrastructure/logger/langgraph/: configure_langgraph_logger.py  langgraph_logger.py
app/infrastructure/middleware/cors/: register_cors_middleware.py
app/infrastructure/middleware/http/: http_logger_middleware.py  register_real_ip_middleware.py
app/infrastructure/repository/: state_repository.py
configuration/: configs.py  settings.toml
docker/api/: Dockerfile.api
(+37 files in other folders)
